yarn install with node-modules nodeLinker

--- a/package.json
+++ b/package.json
@@ -1,1 +1,5 @@
-{"scripts":{"build":"mkdir -p .vercel/output/static && cp -r public/* .vercel/output/static"}}
+{
+  "scripts": {
+    "build": "mkdir -p .vercel/output/static && cp -r public/* .vercel/output/static"
+  }
+}
