--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "build": "rm -rf public api/dist && mkdir public && mkdir api/dist && cp -r src/public/* public && cp -r src/api/* api/dist"
   },
   "dependencies": {
+    "cowsay": "^1.5.0",
     "http-server": "^14.1.1"
   }
 }
