--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "vercel-experiments",
   "scripts": {
-    "build": "rm -rf public api/dist && shadow-cljs release :api :public"
+    "build": "rm -rf public api/dist && shadow-cljs release :api :public",
+    "dev": "node dev.js",
+    "watch": "shadow-cljs watch :api :public"
   },
   "dependencies": {
     "cowsay": "^1.5.0"
   },
   "devDependencies": {
+    "express": "^4.18.2",
     "shadow-cljs": "^2.25.2"
   }
 }
