--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "watch": "shadow-cljs watch :api :public"
   },
   "dependencies": {
-    "cowsay": "^1.5.0"
+    "concat-stream": "^2.0.0",
+    "cookies": "^0.8.0",
+    "cowsay": "^1.5.0",
+    "multiparty": "^4.2.3",
+    "random-bytes": "^1.0.0",
+    "simple-encryptor": "^4.0.0"
   },
   "devDependencies": {
     "express": "^4.18.2",
