--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "cowsay": "^1.5.0",
     "multiparty": "^4.2.3",
     "random-bytes": "^1.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "simple-encryptor": "^4.0.0"
   },
   "devDependencies": {
